// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom should add css class shake-horizontal when error props is equal true 1`] = `
<form
  className="Custom shake-horizontal"
>
  <p
    className="display"
  />
  <div
    className="keyboard"
  >
    <div
      className="functions"
    >
      <button
        className="btn"
        data-name="percentage"
        data-value="%"
        onClick={[Function]}
        title="percentage"
        type="button"
      >
        %
      </button>
      <button
        className="btn"
        data-name="madd"
        onClick={[Function]}
        title="memory plus"
        type="button"
      >
        m+
      </button>
      <button
        className="btn"
        data-name="msubtract"
        onClick={[Function]}
        title="memory minus"
        type="button"
      >
        m−
      </button>
      <button
        className="btn"
        data-name="power"
        data-value="^"
        onClick={[Function]}
        title="power"
        type="button"
      >
        x
        <span>
          Y
        </span>
      </button>
      <button
        className="btn"
        data-name="mclear"
        onClick={[Function]}
        title="memory clear"
        type="button"
      >
        mc
      </button>
      <button
        className="btn"
        data-name="mrecall"
        onClick={[Function]}
        title="memory recall"
        type="button"
      >
        mr
      </button>
      <button
        className="btn"
        data-name="sqrt"
        data-value="√"
        onClick={[Function]}
        title="square root"
        type="button"
      >
        √
      </button>
      <button
        className="btn double"
        data-name="delete"
        onClick={[Function]}
        title="delete"
        type="button"
      >
        delete
      </button>
      <button
        className="btn"
        data-name="pi"
        data-value="π"
        onClick={[Function]}
        title="constant PI"
        type="button"
      >
        π
      </button>
      <button
        className="btn double"
        data-name="clear"
        onClick={[Function]}
        title="clear"
        type="button"
      >
        clear
      </button>
    </div>
    <div
      className="arithmetic"
    >
      <button
        className="btn"
        data-name="number7"
        data-value="7"
        onClick={[Function]}
        title="number 7"
        type="button"
      >
        7
      </button>
      <button
        className="btn"
        data-name="number8"
        data-value="8"
        onClick={[Function]}
        title="number 8"
        type="button"
      >
        8
      </button>
      <button
        className="btn"
        data-name="number9"
        data-value="9"
        onClick={[Function]}
        title="number 9"
        type="button"
      >
        9
      </button>
      <button
        className="btn"
        data-name="addition"
        data-value="+"
        onClick={[Function]}
        title="plus"
        type="button"
      >
        +
      </button>
      <button
        className="btn"
        data-name="multiplication"
        data-value="×"
        onClick={[Function]}
        title="times"
        type="button"
      >
        ×
      </button>
      <button
        className="btn"
        data-name="number4"
        data-value="4"
        onClick={[Function]}
        title="number 4"
        type="button"
      >
        4
      </button>
      <button
        className="btn"
        data-name="number5"
        data-value="5"
        onClick={[Function]}
        title="number 5"
        type="button"
      >
        5
      </button>
      <button
        className="btn"
        data-name="number6"
        data-value="6"
        onClick={[Function]}
        title="number 6"
        type="button"
      >
        6
      </button>
      <button
        className="btn"
        data-name="subtraction"
        data-value="-"
        onClick={[Function]}
        title="minus"
        type="button"
      >
        −
      </button>
      <button
        className="btn"
        data-name="division"
        data-value="÷"
        onClick={[Function]}
        title="divided"
        type="button"
      >
        ÷
      </button>
      <button
        className="btn"
        data-name="number1"
        data-value="1"
        onClick={[Function]}
        title="number 1"
        type="button"
      >
        1
      </button>
      <button
        className="btn"
        data-name="number2"
        data-value="2"
        onClick={[Function]}
        title="number 2"
        type="button"
      >
        2
      </button>
      <button
        className="btn"
        data-name="number3"
        data-value="3"
        onClick={[Function]}
        title="number 3"
        type="button"
      >
        3
      </button>
      <button
        className="btn"
        data-name="parenthesisOpen"
        data-value="("
        onClick={[Function]}
        title="parenthesis opening"
        type="button"
      >
        (
      </button>
      <button
        className="btn"
        data-name="parenthesisClose"
        data-value=")"
        onClick={[Function]}
        title="parenthesis closing"
        type="button"
      >
        )
      </button>
      <button
        className="btn double"
        data-name="number0"
        data-value="0"
        onClick={[Function]}
        title="number 0"
        type="button"
      >
        0
      </button>
      <button
        className="btn"
        data-name="dot"
        data-value="."
        onClick={[Function]}
        title="dot"
        type="button"
      >
        .
      </button>
      <button
        className="btn double"
        data-name="equality"
        onClick={[Function]}
        title="equals"
        type="button"
      >
        =
      </button>
    </div>
  </div>
</form>
`;

exports[`Custom should render the value of formula into element with css class display 1`] = `
<form
  className="Custom"
>
  <p
    className="display"
  >
    789
  </p>
  <div
    className="keyboard"
  >
    <div
      className="functions"
    >
      <button
        className="btn"
        data-name="percentage"
        data-value="%"
        onClick={[Function]}
        title="percentage"
        type="button"
      >
        %
      </button>
      <button
        className="btn"
        data-name="madd"
        onClick={[Function]}
        title="memory plus"
        type="button"
      >
        m+
      </button>
      <button
        className="btn"
        data-name="msubtract"
        onClick={[Function]}
        title="memory minus"
        type="button"
      >
        m−
      </button>
      <button
        className="btn"
        data-name="power"
        data-value="^"
        onClick={[Function]}
        title="power"
        type="button"
      >
        x
        <span>
          Y
        </span>
      </button>
      <button
        className="btn"
        data-name="mclear"
        onClick={[Function]}
        title="memory clear"
        type="button"
      >
        mc
      </button>
      <button
        className="btn"
        data-name="mrecall"
        onClick={[Function]}
        title="memory recall"
        type="button"
      >
        mr
      </button>
      <button
        className="btn"
        data-name="sqrt"
        data-value="√"
        onClick={[Function]}
        title="square root"
        type="button"
      >
        √
      </button>
      <button
        className="btn double"
        data-name="delete"
        onClick={[Function]}
        title="delete"
        type="button"
      >
        delete
      </button>
      <button
        className="btn"
        data-name="pi"
        data-value="π"
        onClick={[Function]}
        title="constant PI"
        type="button"
      >
        π
      </button>
      <button
        className="btn double"
        data-name="clear"
        onClick={[Function]}
        title="clear"
        type="button"
      >
        clear
      </button>
    </div>
    <div
      className="arithmetic"
    >
      <button
        className="btn"
        data-name="number7"
        data-value="7"
        onClick={[Function]}
        title="number 7"
        type="button"
      >
        7
      </button>
      <button
        className="btn"
        data-name="number8"
        data-value="8"
        onClick={[Function]}
        title="number 8"
        type="button"
      >
        8
      </button>
      <button
        className="btn"
        data-name="number9"
        data-value="9"
        onClick={[Function]}
        title="number 9"
        type="button"
      >
        9
      </button>
      <button
        className="btn"
        data-name="addition"
        data-value="+"
        onClick={[Function]}
        title="plus"
        type="button"
      >
        +
      </button>
      <button
        className="btn"
        data-name="multiplication"
        data-value="×"
        onClick={[Function]}
        title="times"
        type="button"
      >
        ×
      </button>
      <button
        className="btn"
        data-name="number4"
        data-value="4"
        onClick={[Function]}
        title="number 4"
        type="button"
      >
        4
      </button>
      <button
        className="btn"
        data-name="number5"
        data-value="5"
        onClick={[Function]}
        title="number 5"
        type="button"
      >
        5
      </button>
      <button
        className="btn"
        data-name="number6"
        data-value="6"
        onClick={[Function]}
        title="number 6"
        type="button"
      >
        6
      </button>
      <button
        className="btn"
        data-name="subtraction"
        data-value="-"
        onClick={[Function]}
        title="minus"
        type="button"
      >
        −
      </button>
      <button
        className="btn"
        data-name="division"
        data-value="÷"
        onClick={[Function]}
        title="divided"
        type="button"
      >
        ÷
      </button>
      <button
        className="btn"
        data-name="number1"
        data-value="1"
        onClick={[Function]}
        title="number 1"
        type="button"
      >
        1
      </button>
      <button
        className="btn"
        data-name="number2"
        data-value="2"
        onClick={[Function]}
        title="number 2"
        type="button"
      >
        2
      </button>
      <button
        className="btn"
        data-name="number3"
        data-value="3"
        onClick={[Function]}
        title="number 3"
        type="button"
      >
        3
      </button>
      <button
        className="btn"
        data-name="parenthesisOpen"
        data-value="("
        onClick={[Function]}
        title="parenthesis opening"
        type="button"
      >
        (
      </button>
      <button
        className="btn"
        data-name="parenthesisClose"
        data-value=")"
        onClick={[Function]}
        title="parenthesis closing"
        type="button"
      >
        )
      </button>
      <button
        className="btn double"
        data-name="number0"
        data-value="0"
        onClick={[Function]}
        title="number 0"
        type="button"
      >
        0
      </button>
      <button
        className="btn"
        data-name="dot"
        data-value="."
        onClick={[Function]}
        title="dot"
        type="button"
      >
        .
      </button>
      <button
        className="btn double"
        data-name="equality"
        onClick={[Function]}
        title="equals"
        type="button"
      >
        =
      </button>
    </div>
  </div>
</form>
`;
